--- a/PlotAndPageGenerationForInterviews.ipynb
+++ b/PlotAndPageGenerationForInterviews.ipynb
@@ -3049,7 +3049,7 @@
     "\n",
     "Full-colour versions of personalised plots, where opacity/transparency (`alpha`) is used to indicate where specific attributes are selected.\n",
     "\n",
-    "__NOTE__ :bangbang: Use of transparency with DataMapPlot in interactive plot is not supported for versions 0.3.0 and below. At the time of writing v0.3.0 is the version available through `conda-forge`. The environment provided therefore loaded datamapplot _last_, via `pip`, to obtain the latest version (0.5.1), into a conda virtual environment"
+    "> __NOTE__ :bangbang: Use of transparency with DataMapPlot in interactive plot is not supported for versions 0.3.0 and below. At the time of writing v0.3.0 is the version available through `conda-forge`. The environment provided therefore loaded datamapplot _last_, via `pip`, to obtain the latest version (0.5.1), into a conda virtual environment"
    ]
   },
   {
