No difference in MWE and defaults for minima theme, bar nav-items and permalink usage. Testing here the impact of permalinks.

--- a/PlotAndPageGenerationForInterviews.ipynb
+++ b/PlotAndPageGenerationForInterviews.ipynb
@@ -5126,7 +5126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "0aec4742",
    "metadata": {},
    "outputs": [
@@ -5710,7 +5710,7 @@
     "        height = 800,\n",
     "        )\n",
     "\n",
-    "    front_matter(personalized_plot,stakehoder_contri[\"Stakeholder ID\"],'_plots')\n",
+    "    front_matter(plot_grey,stakehoder_contri[\"Stakeholder ID\"],'_plots')\n",
     "    #front_matter(plot_grey,stakehoder_contri[\"Stakeholder ID\"],stakehoder_contri[\"Stakeholder ID\"],'true','_plots')\n",
     "\n",
     "              \n",
